--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,12 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
+		<attributes>
+			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -17,10 +23,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="D:/Javier/FORMATION-JAVA/PROJET/BN-JSF_JPA/ancien-version/LibEnsembleNavire/LibEnsembleNavire/DataSerializer-jar-with-dependencies (1).jar"/>
+	<classpathentry kind="lib" path="D:/Javier/FORMATION-JAVA/PROJET/BN-JSF_JPA/ancien-version/LibEnsembleNavire/LibEnsembleNavire/EnsembleNavire-0.0.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
